; ModuleID = '/home/carl/AnghaBench/esp-idf/components/spiffs/extr_esp_spiffs.c_esp_vfs_spiffs_unregister.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/spiffs/extr_esp_spiffs.c_esp_vfs_spiffs_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@ESP_OK = common dso_local global i64 0, align 8
@ESP_ERR_INVALID_STATE = common dso_local global i64 0, align 8
@_efs = common dso_local global %struct.TYPE_3__** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @esp_vfs_spiffs_unregister(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 @esp_spiffs_by_label(i8* %6, i32* %4)
  %8 = load i64, i64* @ESP_OK, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i64, i64* @ESP_ERR_INVALID_STATE, align 8
  store i64 %11, i64* %2, align 8
  br label %33

12:                                               ; preds = %1
  %13 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @_efs, align 8
  %14 = load i32, i32* %4, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %13, i64 %15
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @esp_vfs_unregister(i32 %19)
  store i64 %20, i64* %5, align 8
  %21 = load i64, i64* %5, align 8
  %22 = load i64, i64* @ESP_OK, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %12
  %25 = load i64, i64* %5, align 8
  store i64 %25, i64* %2, align 8
  br label %33

26:                                               ; preds = %12
  %27 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @_efs, align 8
  %28 = load i32, i32* %4, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %27, i64 %29
  %31 = call i32 @esp_spiffs_free(%struct.TYPE_3__** %30)
  %32 = load i64, i64* @ESP_OK, align 8
  store i64 %32, i64* %2, align 8
  br label %33

33:                                               ; preds = %26, %24, %10
  %34 = load i64, i64* %2, align 8
  ret i64 %34
}

declare dso_local i64 @esp_spiffs_by_label(i8*, i32*) #1

declare dso_local i64 @esp_vfs_unregister(i32) #1

declare dso_local i32 @esp_spiffs_free(%struct.TYPE_3__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
